[tool.poetry]
name = "price-bot"
version = "0.1.0"
description = ""
authors = ["Ilya Dashkevich <94009854+goftok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
rich = "^13.6.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
pycookiecheat = "^0.6.0"
robotexclusionrulesparser = "^1.7.1"
python-dotenv = "^1.0.0"
selenium = "^4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
